modules/gdscript/tests/scripts/analyzer/errors/for_loop_on_literal_int.gd
func test():
	for x in 1:
		if x is String:
			pass
